--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/SnowLune/social-network-api#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "mongoose": "^6.4.6",
     "uuid": "^8.3.2"
   }
 }
