--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/SnowLune/social-network-api#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.4.6",
-    "uuid": "^8.3.2"
+    "mongoose": "^6.4.7",
+    "uuid": "^8.3.2",
+    "whatwg-url": "^11.0.0"
   }
 }
